HMAN-851 validation and persistence of isAPanelFlag. Sonar suggestions.